@startuml Diagram Database MIW

!define table(x) class x << (T,#FFAAAA) >>
!define primary_key(x) <b><u>x</u></b>
!define foreign_key(x) <color:blue>x</color>

skinparam class {
    BackgroundColor White
    ArrowColor #2688d4
    BorderColor #2688d4
}

table(data_paket) {
    primary_key(pak_id): int
    jenis_paket: enum
    mata_uang: enum
    program_pilihan: varchar(255)
    tanggal_keberangkatan: date
    harga_quad: decimal(15,2)
    harga_triple: decimal(15,2)
    harga_double: decimal(15,2)
    hotel_medinah: varchar(100)
    hotel_makkah: varchar(100)
    hotel_tambahan: text
    kamar_medinah: text
    kamar_makkah: text
    kamar_tambahan: text
    nomor_kamar: text
    hcn: text
    created_at: timestamp
    updated_at: timestamp
}

table(data_jamaah) {
    primary_key(nik): varchar(16)
    foreign_key(pak_id): int
    nama: varchar(100)
    tempat_lahir: varchar(50)
    tanggal_lahir: date
    jenis_kelamin: enum
    alamat: text
    kode_pos: varchar(10)
    email: varchar(50)
    no_telp: varchar(20)
    tinggi_badan: int
    berat_badan: int
    nama_ayah: varchar(100)
    nama_ibu: varchar(100)
    status_pembayaran: enum
    total_pembayaran: decimal(15,2)
    sisa_pembayaran: decimal(15,2)
    tipe_kamar: enum
    created_at: timestamp
    updated_at: timestamp
}

table(data_manifest) {
    primary_key(manifest_id): int
    foreign_key(pak_id): int
    foreign_key(nik): varchar(16)
    kode_kamar: varchar(5)
    nomor_kamar_medinah: varchar(5)
    nomor_kamar_makkah: varchar(5)
    hubungan_mahram: varchar(30)
    created_at: timestamp
    updated_at: timestamp
}

table(data_pembatalan) {
    primary_key(pembatalan_id): int
    foreign_key(nik): varchar(16)
    alasan: text
    tanggal_pengajuan: timestamp
    status: enum
    jumlah_pengembalian: decimal(15,2)
    kwitansi_path: timestamp
    bukti_path: timestamp
    verified_at: timestamp
    created_at: timestamp
    updated_at: timestamp
}

table(data_pembayaran) {
    primary_key(pembayaran_id): int
    foreign_key(nik): varchar(16)
    jenis_pembayaran: enum
    metode_pembayaran: enum
    jumlah: decimal(15,2)
    status: enum
    verified_at: timestamp
    verified_by: varchar(50)
    created_at: timestamp
}

' Relasi
data_jamaah }|--|| data_paket : pak_id
data_manifest }|--|| data_paket : pak_id
data_manifest }|--|| data_jamaah : nik
data_pembatalan }|--|| data_jamaah : nik
data_pembayaran }|--|| data_jamaah : nik

@enduml
